--- a/DescriptiveResources/DescriptiveResources.csproj
+++ b/DescriptiveResources/DescriptiveResources.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <AssemblyName>OneHitResource</AssemblyName>
-    <Description>BepInEx plugin to collect all resources from make resources nodes in one click</Description>
+    <AssemblyName>DescriptiveResources</AssemblyName>
+    <Description>BepInEx plugin to display obtainable resource information on material node prompt</Description>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
@@ -12,7 +12,7 @@
       https://nuget.bepinex.dev/v3/index.json;
       https://nuget.samboy.dev/v3/index.json
     </RestoreAdditionalProjectSources>
-    <RootNamespace>OneHitResource</RootNamespace>
+    <RootNamespace>DescriptiveResources</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
