--- a/OneHitResource/OneHitResource.csproj
+++ b/OneHitResource/OneHitResource.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>OneHitResource</AssemblyName>
-    <Description>BepInEx plugin to collect all resources from make resources nodes in one click</Description>
+    <Description>BepInEx plugin to collect all resources from resources nodes in one click</Description>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
