--- a/OneHitResource/OneHitResource.csproj
+++ b/OneHitResource/OneHitResource.csproj
@@ -27,5 +27,8 @@
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>lib/UnityEngine.CoreModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>lib/UnityEngine.UI.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
