--- a/DescriptiveResources/DescriptiveResources.csproj
+++ b/DescriptiveResources/DescriptiveResources.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>DescriptiveResources</AssemblyName>
     <Description>BepInEx plugin to display obtainable resource information on material node prompt</Description>
-    <Version>1.0.0</Version>
+    <Version>1.0.2</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
@@ -23,6 +23,9 @@
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>lib/UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>lib/UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
