getting null reference exception but saves new list into m_itemdatalisttbl

--- a/InventoryExpander/InventoryExpander.csproj
+++ b/InventoryExpander/InventoryExpander.csproj
@@ -24,5 +24,8 @@
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>lib/UnityEngine.CoreModule.dll</HintPath>
     </Reference>
+    <Reference Include="Il2Cppmscorlib">
+      <HintPath>lib/Il2Cppmscorlib.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
