--- a/ConversionOverhaul/ConversionOverhaul.csproj
+++ b/ConversionOverhaul/ConversionOverhaul.csproj
@@ -30,5 +30,8 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>lib/UnityEngine.UI.dll</HintPath>
     </Reference>
+    <Reference Include="SystemGame">
+      <HintPath>lib/System.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
