--- a/ConversionOverhaul/ConversionOverhaul.csproj
+++ b/ConversionOverhaul/ConversionOverhaul.csproj
@@ -30,8 +30,9 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>lib/UnityEngine.UI.dll</HintPath>
     </Reference>
-    <Reference Include="SystemGame">
-      <HintPath>lib/System.dll</HintPath>
+    <Reference Include="Il2Cppmscorlib.dll">
+      <HintPath>./lib/Il2Cppmscorlib.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
 </Project>
