--- a/ConversionOverhaul/ConversionOverhaul.csproj
+++ b/ConversionOverhaul/ConversionOverhaul.csproj
@@ -30,6 +30,9 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>lib/UnityEngine.UI.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.UIModule">
+      <HintPath>lib/UnityEngine.UIModule.dll</HintPath>
+    </Reference>
     <Reference Include="Il2Cppmscorlib.dll">
       <HintPath>./lib/Il2Cppmscorlib.dll</HintPath>
       <Private>False</Private>
